Expose automatic service provider for Laravel
Signed-off-by: Brendan Bullen <66941+bullenb@users.noreply.github.com>

--- a/composer.json
+++ b/composer.json
@@ -42,5 +42,12 @@
         "allow-plugins": {
             "php-http/discovery": true
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Oilstone\\ApiContentfulIntegration\\Integrations\\Laravel\\Providers\\ContentfulServiceProvider"
+            ]
+        }
     }
 }
